--- a/fabioscagliola/themes/fabioscagliola/assets/css/main.css
+++ b/fabioscagliola/themes/fabioscagliola/assets/css/main.css
@@ -1,11 +1,17 @@
 body {
-  padding-top: 80px;
+  margin-top: 80px;
+}
+
+blockquote {
+  font-size: 1.25rem;
+  margin-bottom: 40px;
+  margin-top: 40px;
 }
 
 h2 {
-  padding-top: 60px;
+  margin-top: 60px;
 }
 
 h3 {
-  padding-top: 40px;
+  margin-top: 40px;
 }
