--- a/fabioscagliola/themes/fabioscagliola/layouts/partials/head.html
+++ b/fabioscagliola/themes/fabioscagliola/layouts/partials/head.html
@@ -1,12 +1,16 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/cyborg/bootstrap.min.css">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="manifest" href="/site.webmanifest">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/cyborg/bootstrap.min.css">
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
 <meta name="author" content="Fabio Scagliola">
-<meta name="description" content="" />
+<meta name="description" content="Software Architect. Musician as Nothence. Avid horror and science fiction reader and occasional writer." />
 <meta name="keywords" content="" />
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<meta name="viewport" content="width=device-width">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-33942638-2"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
