--- a/fabioscagliola/themes/fabioscagliola/layouts/partials/footer.html
+++ b/fabioscagliola/themes/fabioscagliola/layouts/partials/footer.html
@@ -1,3 +1,4 @@
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <p class="text-muted">Copyright 1998-{{ now.Year }} Fabio Scagliola. All rights reserved.</p>
 </footer>
+<a style="display: none;" rel="me" href="https://indieauthors.social/@fabioscagliola">Mastodon</a>
